--- a/Javascript/style.css
+++ b/Javascript/style.css
@@ -21,3 +21,25 @@ body{
     font-size: 3em;
     margin-left: 125px;
 }
+
+#clock-container{
+    display: flex;
+    max-width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    align-items: center;
+    border: solid;
+    border-width: 5px;
+    border-radius: 50px;
+    border-color: aqua;
+    background-color:dodgerblue;
+}
+
+#clock{
+    font-family: monospace;
+    font-size: 2.5rem;
+    text-align: center;
+    font-weight: bold;
+    margin: 10px;
+}
